data/test/regression/type_check/fail/issue_60e.v
wire x;
initial begin
  $write("no args", x);
  $finish;
end
